Created attachment 70529 [details] Sample data for pivot table Open the attachment spreadsheet. Create a pivot table, with all by default. Date as row field, value as data field. Group by date - Month. Ok. Menu/Data/Ungroup -> crash LibO.
System: Win 7x64 Ultimate. Sorry no issue with 3.5.7.2
Created attachment 70532 [details] bt with symbols + console logs On pc Debian x86-64 with master sources updated today (commit 4a19c5bc3c679f83ac0d906e39dc1c51cbea97af), I reproduced the crash. Attached bt + console logs
Kohei: one for you?
Created attachment 70818 [details] Bug 57497 - WinDbg session with FAILED_SOURCE_CODE Confirmed with: LO 4.0.0.0.alpha1+ Build ID: own W7 debug build (dec8fe97d9f48d59b6bb0f98faded0f6aa8397df) Windows 7 Professional SP1 64 bit Attached full WinDbg session with FAILED_SOURCE_CODE.
I'll look into it.
Ok. I found the cause of the crash, which was luckily just a simple oversight. I'm now trying to set up a unit test for this, to prevent this from regressing in future releases.
Kohei Yoshida committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=56bb08e75c12cb85041607f7f34451018b09414f fdo#57497: Remove group table data when all group dimensions are gone. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Kohei Yoshida committed a patch related to this issue. It has been pushed to "libreoffice-4-0": http://cgit.freedesktop.org/libreoffice/core/commit/?id=24d18ae11a5d78c322f18460e7b1b423af221328&g=libreoffice-4-0 fdo#57497: Remove group table data when all group dimensions are gone. It will be available in LibreOffice 4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hi Kohei, thanks. I'll try. Nice to see how detailed are the comments in the code.
Seems to me solved in LoDev Version 4.0.0.0.beta1+ (Build ID: 465d3512cca457c79e6ef85ad1cbf6bcc88e888)
Kohei Yoshida committed a patch related to this issue. It has been pushed to "libreoffice-3-6": http://cgit.freedesktop.org/libreoffice/core/commit/?id=f421e804371670001bc5af25b8b66d67dfdb3261&g=libreoffice-3-6 fdo#57497: Remove group table data when all group dimensions are gone. It will be available in LibreOffice 3.6.5. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Now I can mark this fixed. The fix will be in 3.6.5.
As part of FDO maintenance we are checking versions of regressions against minor releases. I have been able to verify this bug on: 3.6.0.0-alpha1 Updating version