fdo#57497: Remove group table data when all group dimensions are gone.

Otherwise ungrouping date grouped dimension may crash, or produce
incorrect results.

Change-Id: I3634e3c0bf8336fc1221f5d234cb7e01eb1f07c6